fix: proportion bars: - wrap in IIFC to isolate scope - find within base element instead of globally with $ (avoids incidental editing of elements outside the component) - add to demo page

--- a/themes/evictionlab/assets/charts/charts.css
+++ b/themes/evictionlab/assets/charts/charts.css
@@ -267,7 +267,7 @@
 
 /** ...Besides the bars, which get to big */
 @media(min-width: 768px) {
-  .chart.proportional-bars {
+  .chart.proportion-bars {
     width: 84%;
     margin-left: 8%;
   }
